src/_static.mojo


# @always_inline
# fn pattern_create_rgba(red: c_double, green: c_double, blue: c_double, alpha: c_double) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pattern_create_rgba", UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double, c_double, c_double](red, green, blue, alpha)

# @always_inline
# fn pattern_create_for_surface(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pattern_create_for_surface", UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn pattern_create_linear(x0: c_double, y0: c_double, x1: c_double, y1: c_double) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pattern_create_linear", UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double, c_double, c_double](x0, y0, x1, y1)

# @always_inline
# fn pattern_create_radial(cx0: c_double, cy0: c_double, radius0: c_double, cx1: c_double, cy1: c_double, radius1: c_double) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pattern_create_radial", UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double, c_double](cx0, cy0, radius0, cx1, cy1, radius1)

# @always_inline
# fn pattern_create_mesh() -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pattern_create_mesh", UnsafePointer[__CairoPatternT, MutExternalOrigin]]()

# @always_inline
# fn pattern_reference(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pattern_reference", UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn pattern_destroy(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_pattern_destroy", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn pattern_get_reference_count(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> c_uint:
#     return external_call["cairo_pattern_get_reference_count", c_uint, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn pattern_status(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_pattern_status", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern))

# @always_inline
# fn pattern_get_type(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_pattern_get_type", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn pattern_add_color_stop_rgb(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], offset: c_double, red: c_double, green: c_double, blue: c_double) -> NoneType:
#     return external_call["cairo_pattern_add_color_stop_rgb", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double, c_double, c_double](pattern, offset, red, green, blue)

# @always_inline
# fn pattern_add_color_stop_rgba(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], offset: c_double, red: c_double, green: c_double, blue: c_double, alpha: c_double) -> NoneType:
#     return external_call["cairo_pattern_add_color_stop_rgba", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double](pattern, offset, red, green, blue, alpha)

# @always_inline
# fn mesh_pattern_begin_patch(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_mesh_pattern_begin_patch", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn mesh_pattern_end_patch(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_mesh_pattern_end_patch", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn mesh_pattern_curve_to(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], x1: c_double, y1: c_double, x2: c_double, y2: c_double, x3: c_double, y3: c_double) -> NoneType:
#     return external_call["cairo_mesh_pattern_curve_to", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double, c_double, c_double, c_double, c_double](pattern, x1, y1, x2, y2, x3, y3)

# @always_inline
# fn mesh_pattern_line_to(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], x: c_double, y: c_double) -> NoneType:
#     return external_call["cairo_mesh_pattern_line_to", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double](pattern, x, y)

# @always_inline
# fn mesh_pattern_move_to(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], x: c_double, y: c_double) -> NoneType:
#     return external_call["cairo_mesh_pattern_move_to", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double](pattern, x, y)

# @always_inline
# fn mesh_pattern_set_control_point(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], point_num: c_uint, x: c_double, y: c_double) -> NoneType:
#     return external_call["cairo_mesh_pattern_set_control_point", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_uint, c_double, c_double](pattern, point_num, x, y)

# @always_inline
# fn mesh_pattern_set_corner_color_rgb(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], corner_num: c_uint, red: c_double, green: c_double, blue: c_double) -> NoneType:
#     return external_call["cairo_mesh_pattern_set_corner_color_rgb", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_uint, c_double, c_double, c_double](pattern, corner_num, red, green, blue)

# @always_inline
# fn mesh_pattern_set_corner_color_rgba(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], corner_num: c_uint, red: c_double, green: c_double, blue: c_double, alpha: c_double) -> NoneType:
#     return external_call["cairo_mesh_pattern_set_corner_color_rgba", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_uint, c_double, c_double, c_double, c_double](pattern, corner_num, red, green, blue, alpha)

# @always_inline
# fn pattern_set_matrix(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], matrix: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_pattern_set_matrix", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin]](pattern, matrix)

# @always_inline
# fn pattern_get_matrix(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_pattern_get_matrix", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, MutExternalOrigin]](pattern, matrix)

# @always_inline
# fn pattern_set_extend(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], extend: c_int) -> NoneType:
#     return external_call["cairo_pattern_set_extend", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_int](pattern, extend)

# @always_inline
# fn pattern_get_extend(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_pattern_get_extend", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn pattern_set_filter(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], filter: c_int) -> NoneType:
#     return external_call["cairo_pattern_set_filter", NoneType, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_int](pattern, filter)

# @always_inline
# fn pattern_get_filter(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_pattern_get_filter", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin]](pattern)

# @always_inline
# fn pattern_get_rgba(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], red: UnsafePointer[c_double, MutExternalOrigin], green: UnsafePointer[c_double, MutExternalOrigin], blue: UnsafePointer[c_double, MutExternalOrigin], alpha: UnsafePointer[c_double, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_pattern_get_rgba", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](pattern, red, green, blue, alpha))

# @always_inline
# fn pattern_get_surface(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], surface: UnsafePointer[UnsafePointer[__CairoSurfaceT, MutExternalOrigin], MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_pattern_get_surface", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[UnsafePointer[__CairoSurfaceT, MutExternalOrigin], MutExternalOrigin]](pattern, surface))

# @always_inline
# fn pattern_get_color_stop_rgba(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], index: c_int, offset: UnsafePointer[c_double, MutExternalOrigin], red: UnsafePointer[c_double, MutExternalOrigin], green: UnsafePointer[c_double, MutExternalOrigin], blue: UnsafePointer[c_double, MutExternalOrigin], alpha: UnsafePointer[c_double, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_pattern_get_color_stop_rgba", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], c_int, UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](pattern, index, offset, red, green, blue, alpha))

# @always_inline
# fn pattern_get_color_stop_count(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], count: UnsafePointer[c_int, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_pattern_get_color_stop_count", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](pattern, count))

# @always_inline
# fn pattern_get_linear_points(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], x0: UnsafePointer[c_double, MutExternalOrigin], y0: UnsafePointer[c_double, MutExternalOrigin], x1: UnsafePointer[c_double, MutExternalOrigin], y1: UnsafePointer[c_double, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_pattern_get_linear_points", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](pattern, x0, y0, x1, y1))

# @always_inline
# fn pattern_get_radial_circles(pattern: UnsafePointer[__CairoPatternT, MutExternalOrigin], x0: UnsafePointer[c_double, MutExternalOrigin], y0: UnsafePointer[c_double, MutExternalOrigin], r0: UnsafePointer[c_double, MutExternalOrigin], x1: UnsafePointer[c_double, MutExternalOrigin], y1: UnsafePointer[c_double, MutExternalOrigin], r1: UnsafePointer[c_double, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_pattern_get_radial_circles", c_int, UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](pattern, x0, y0, r0, x1, y1, r1))
